src/assets/scss/_footer.scss
@import "variables";

@media (any-hover: hover) {
  .footer-menu {
    a:hover {
      text-decoration: underline;
    }
  }
}

.footer {
  position:    relative;
  padding-top: 186px;
  .container {
    display:         flex;
    flex-direction:  column;
    align-items:     center;
    justify-content: flex-start;
  }
  .back-call {
    position:        absolute;
    z-index:         0;
    left:            0;
    object-fit:      cover;
    height:          100%;
    object-position: top;
    top:             0;
  }
  h2 {
    color:       #1b272f;
    font-size:   60px;
    font-weight: 500;
    line-height: 1.2;
    max-width:   1100px;
    margin:      0 0 72px 0;
  }
  .button {
    margin-bottom: 52px;
  }
  p {
    color:         #adadad;
    font-size:     30px;
    font-weight:   300;
    line-height:   1.33;
    text-align:    center;
    margin-bottom: 82px;
    max-width:     1150px;
  }
}

.footer-menu {
  width:           100%;
  display:         flex;
  justify-content: space-between;
  align-items:     center;
  padding:         0 0 40px 0;
  list-style-type: none;
  font-size:       20px;
  max-width:       1150px;
  margin:          0 auto;
  a {
    color: $mainColor;
    &:active {
      text-decoration: underline;
      opacity:         .7;
    }
  }
}

@media screen and (max-width: 991.98px) {
  .footer {
    h2 {
      font-size: 43px;
    }
    p {
      font-size: 22px;
    }
  }
}

@media screen and (max-width: 567px) {
  .footer {
    padding-top: 90px;
    .button {
      margin-bottom: 25px;
    }
    h2 {
      font-size: 26px;
      margin:    0 0 36px 0;
    }
    p {
      font-size:     16px;
      margin-bottom: 40px;
    }
  }
  .footer-menu {
    flex-direction: column;
    li {
      margin-bottom: 20px;
    }
  }
}

